Fixes the last comments dashboard avatar alignment
Issue #431

--- a/app/assets/stylesheets/administration_structure.css.scss
+++ b/app/assets/stylesheets/administration_structure.css.scss
@@ -228,3 +228,7 @@ twitter-typeahead {
 .save-bar {
   height: 40px;
 }
+
+.gravatar {
+  margin-right: 10px;
+}
